[package]
name = "algar"
authors = ["Stefano Candori <stefano.candori@prima.it>"]
description = "Algebraic structures, higher-kinded types and other category theory bad ideas"
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/cando/Algar"
homepage = "https://github.com/cando/Algar"
keywords = ["category-theory", "fp", "monad", "monad-transformers", "functional"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "turtle_operations"
test = true

[[example]]
name = "expr_step0"
test = true

[[example]]
name = "expr_step1"
test = true

[[example]]
name = "expr_step2"
test = true


[[example]]
name = "expr_step2b"
test = true

