[package]
name = "algar"
authors = ["Stefano Candori <stefano.candori@prima.it>"]
description = "Algebraic structures, higher-kinded types and other category theory bad ideas"
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/cando/Algar"
homepage = "https://github.com/cando/Algar"
keywords = ["category-theory", "fp", "monad", "monad-transformers", "functional"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "turtle_operations"
test = true

[[example]]
name = "0_expr_base"
test = true

[[example]]
name = "1_expr_base_b"
test = true

[[example]]
name = "2_expr_coproduct_of_functors"
test = true

[[example]]
name = "3_expr_coproduct_of_functors_b"
test = true

[[example]]
name = "4_expr_object_algebras"
test = true

[[example]]
name = "5_expr_final_tagless"
test = true
